--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,11 @@
 	<meta name="viewport" content="width=device-width">
 	<title>Speechify</title>
 	<link rel="stylesheet" href="style.css">
+	<link href='https://fonts.googleapis.com/css?family=Shadows+Into+Light' rel='stylesheet' type='text/css'>
 </head>
 <body>
-	<div>
+	<h1>Speechify</h1>
+	<div class="speech">
 		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In commodo sagittis purus, vel aliquet justo dignissim a. Etiam fringilla, nisl ut facilisis mattis, enim lectus accumsan nulla, bibendum tempor arcu erat a diam. Sed at nibh purus. Nam urna odio, facilisis quis elit sed, lacinia vestibulum sapien. Fusce interdum fringilla neque, quis dignissim dolor tristique dictum. Curabitur auctor dolor risus, id hendrerit sem venenatis id. Proin dapibus faucibus mollis. Nulla facilisi. Aliquam a tincidunt massa. Nulla gravida tellus in justo mattis auctor. Cras pharetra est vel lectus sollicitudin ornare. Donec nec arcu lorem. Aliquam tristique ultrices aliquam.</p>
 	</div>
 </body>
