Add jQuery; Sample json files

--- a/public/index.html
+++ b/public/index.html
@@ -6,16 +6,18 @@
 	<title>Speechify</title>
 	<link rel="stylesheet" href="style.css">
 	<link href='https://fonts.googleapis.com/css?family=Shadows+Into+Light' rel='stylesheet' type='text/css'>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 </head>
 <body>
 	<h1>Speechify</h1>
 	<div class="speech">
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In commodo sagittis purus,
-			vel aliquet justo dignissim a. Etiam fringilla, nisl ut facilisis mattis, enim lectus
-			accumsan nulla, bibendum tempor arcu erat a diam. Sed at nibh purus. Nam urna odio, facilisis quis elit sed,
-			lacinia vestibulum sapien. Fusce interdum fringilla neque, quis dignissim dolor tristique dictum. Curabitur auctor dolor risus,
-			id hendrerit sem venenatis id. Proin dapibus faucibus mollis. Nulla facilisi. Aliquam a tincidunt massa. Nulla gravida tellus in justo mattis auctor.
-			<span class="hinge">Cras pharetra est</span> vel lectus sollicitudin ornare. Donec nec arcu lorem. Aliquam tristique ultrices aliquam.</p>
+		<p><span class="hinge">But we refuse</span> to believe that the bank of justice is bankrupt. We refuse to believe that there are
+			<span class="hinge">insufficient funds</span> in the great vaults of opportunity of this nation. <span class="hinge">And so,</span> we've come to cash this check, a check that will
+			 give us upon demand the riches of freedom and the security of justice.
+			</p>
 	</div>
 </body>
 </html>
+<script>
+
+</script>
