Add text to links div and update its style.

--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,7 @@ $(document).ready(function(){
 		console.log('text:', text);
 		console.log('ngrams:', ngrams);
 		console.log(hinge);
-		$(hinge).append('<div class="links">' + author + '</div>');
+		$(hinge).append('<div class="links">' + author + '</br>' + text + '</div>');
 
 	}
 });
